src/App.css
body {
  overflow: hidden;
}

div.body {
  display: flex;
  flex-direction: column;
  width: 98%;
  height: 100%;
}


div.close {
  background: #4e4e4e;
  opacity: 0.7;
  width: 2%;
}

div.close:hover {
  opacity: 0.9;
}

div.input_row {
  display: flex;
  flex-grow: 1;
}

input[type=range]{
  width: 75%;
}

input[type=number]{
  width: 17%;
  margin-left: 2%;
  margin-right: 1%;
  margin-top: 2%;
  margin-bottom: 2%;
}

button {
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 1%;
  margin-bottom: 2%;
}

canvas {
  width: 100vw;
  height: 100vh;
}

